--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@ button{
 <p id="on"></p>
 <hr>
 <div class="chat" id="chat"></div>
-<input placeholder="digite seu apelido" id="msg"><button id="login">entrar</button>
+<input placeholder="digite seu apelido" id="msg"><button id="env" onclick='login()'>entrar</button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 </script>
 <script src="socket.io/socket.io.js"></script>
