--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@ button{
 <h1> chat </h1>
 <h3 id="uel"> entre na sala </h3>
 <p id="on"></p>
+<p id="count"></p>
 <hr>
 <div class="chat" id="chat"></div>
 <input placeholder="digite seu apelido" id="msg"><button id="env" onclick='login()'>entrar</button>
