--- a/routers/public/index.html
+++ b/routers/public/index.html
@@ -1,31 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<style>
-	h1{
-		background-color: 'DeepSkyBlue';
-		margin:0;
-		}
-body {
-	margin-left: 10px;
-	font-size: 200%;
-	width: 90%;
-	height: 70vh;
-	}
-.chat {
-	width: 90%;
-	height: 60%;
-	margin:0;
-	background-color: 'LightSteelBlue';
-	overflow-y : scroll;
-	}
-input {
-	font-size: 200%;
-	}
-button{
-	font-size: 200%;
-	}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 <body>
 <h1> chat </h1>
@@ -34,10 +10,16 @@ button{
 <p id="count"></p>
 <hr>
 <div class="chat" id="chat"></div>
+<div id="inp">
 <input placeholder="digite seu apelido" id="msg"><button id="env" onclick='login()'>entrar</button>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 </script>
 <script src="socket.io/socket.io.js"></script>
 <script src="app.js"></script>
+
+<div class="dev">
+<p class="dev">Reinan® 2019 dev.</p>
+</div>
 </body>
 </html>
